# bridge

./: .coveragerc  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: review.yml  unitest.yml
app/: main.py
app/config/: config.py
app/dto/: access.py  brightness.py  info.py  pixel.py
app/middleware/: log.py
app/routes/: matrix.py
app/services/auth/: __init__.py  data.py  keycloack.py  proto.py
app/services/client/: __init__.py  proto.py  stream.py  ws.py
app/services/client/receive/: __init__.py  proto.py  rgb.py  rgb_ws.py
app/services/delivery/: __init__.py  broker.py  proto.py
app/services/notify/: __init__.py  proto.py  stream.py
app/services/receive/: __init__.py  data.py  proto.py  rgb.py
app/services/secure/: access.py  proto.py
app/services/stream/: __init__.py  proto.py  ws.py
app/utils/: callback.py
docker/: Dockerfile
tests/fixtures/: __init__.py  secure.py
tests/services/: access_test.py  delivery_test.py  rgb_receiver_test.py  test_rgb_receiver.py  ws_notifier_test.py  ws_stream_test.py
